chore: edited history API routes
